# pvr.magenta

./: .travis.yml  CMakeLists.txt  FindTinyXML2.cmake  README.md  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
pvr.magenta/: addon.xml.in  changelog.txt  mygenres.json  mygenres2.json
pvr.magenta/resources/: settings.xml
pvr.magenta/resources/language/resource.language.de_de/: strings.po
pvr.magenta/resources/language/resource.language.en_gb/: strings.po
pvr.magenta/resources/language/resource.language.en_us/: strings.po
src/: Base64.cpp  Base64.h  Globals.h  PVRMagenta.cpp  PVRMagenta.h  PVRMagenta2.cpp  PVRMagenta2.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h  sha256.cpp
src/auth/: AuthClient.cpp  AuthClient.h  JWT.cpp  JWT.h
src/http/: Cache.cpp  Curl.cpp  Curl.h  HttpClient.cpp  HttpClient.h
src/sam3/: Sam3Client.cpp  Sam3Client.h
src/sso/: SsoClient.cpp  SsoClient.h
src/taa/: TaaClient.cpp  TaaClient.h
